<resources>
    <string name="app_name">Exercise2</string>
    <string name="author_name">Vladislav Kononov</string>
    <string name="author_experience">Citizen-media, back-end envisioneer maximize capture embedded, plug-and-play cross-platform supply-chains relationships real-time, proactive frictionless. Life-hacks communities standards-compliant, cross-platform A-list open-source harness web-readiness global interfaces: granular disintermediate whiteboard users networking schemas transparent integrate applications, integrate data-driven web-readiness web-enabled schemas</string>
    <string name="enter_message_hint">Enter a message...</string>
    <string name="author_experience_title">Senior Asp.net developer</string>
    <string name="no_email_client_error">You need mail client to send email</string>
    <string name="message_text_empty">Message is empty</string>
    <string name="send_message">Send message</string>
</resources>
