<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/author_name"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/author_image_height"
                android:src="@drawable/author" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/left_margin"
                android:orientation="vertical">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginTop="@dimen/default_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="match_parent"
                        android:src="@drawable/aspnet_logo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin"
                        android:text="@string/author_experience_title"
                        android:textSize="@dimen/text_size"
                        tools:text="Senior Asp.net developer" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/boder_size"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@color/border_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/author_experience"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/boder_size"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@color/border_color" />

                <EditText
                    android:id="@+id/message_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/message_text_height"
                    android:layout_marginTop="@dimen/default_margin"
                    android:hint="@string/enter_message_hint"
                    android:inputType="text"
                    android:textSize="@dimen/text_size" />

                <Button
                    android:id="@+id/send_message_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_message" />

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_instagram"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/half_margin"
                        android:src="@drawable/instagram" />

                    <ImageView
                        android:id="@+id/img_facebook"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginStart="@dimen/half_margin"
                        android:layout_marginEnd="@dimen/half_margin"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/img_linkedin"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginStart="@dimen/half_margin"
                        android:src="@drawable/linkedin" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>